# _example_/docs/swagger.json
@@ -42,6 +42,15 @@
                     }
                 }
             }
+        },
+        "/paymentCallback": {
+            "post": {
+                "description": "Paytr Callback API (No request and response needed)",
+                "tags": [
+                    "Paytr Callback"
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
